--- a/franklyn-frontend/src/app/components/new-test/new-test.component.css
+++ b/franklyn-frontend/src/app/components/new-test/new-test.component.css
@@ -1,23 +1,18 @@
 .form-control{
-    width: 500px;
+    width: 40%;
     height: 40px;
 }
 
 .form-select{
-    width: 500px;
+    width: 40%;
     height: 30px;
 }
 
 .btn-forward{
     color: white;
-    margin-bottom: 20px;
     background-color: #02c39a;
     width: 200px;
     float: right; 
-}
-
-.lonebtn{
-    margin-left: 85%;
 }
 
 .btn-forward:hover{
@@ -41,6 +36,10 @@
     padding: 30px;
 }
 
+.card-body{
+    padding: 0px
+}
+
 .col-9{
     width: 100%;
     height: 100%;
@@ -61,7 +60,8 @@
 }
 
 mat-form-field{
-    width: 500px;
+    width: 40%;
+    border-radius: 30px;
 }
 
 .card{
@@ -108,4 +108,12 @@ label{
     float: right;
     display: inline-block;
     padding: 20px;
+  }
+
+  .required{
+    width: 40%;
+  }
+
+  form{
+    margin: 20px;
   }
